--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,15 +1,150 @@
+.article {
+  width: 46.9rem;
+}
+
+.article h2 {
+  font-size: 2.8rem;
+  font-family: "Barlow Condensed";
+  color: var(--light-purple);
+  letter-spacing: 0.475rem;
+  line-height: 1.5;
+}
+
+.article strong {
+  font-weight: 100;
+  color: white;
+  font-family: "Bellefair";
+  font-size: 15rem;
+}
+
+.article p {
+  font-size: 1.8rem;
+  color: var(--light-purple);
+  line-height: 1.5;
+  text-align: justify;
+  margin: 0;
+}
+
+.exploreButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2.8rem;
+  color: var(--almost-black);
+  background-color: white;
+  border-radius: 50%;
+  width: 20rem;
+  height: 20rem;
+  position: relative;
+  z-index: 0;
+}
+
+.exploreButton:hover::before {
+  content: "";
+  width: 35rem;
+  height: 35rem;
+  position: absolute;
+  z-index: -1;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(2px);
+  -webkit-backdrop-filter: blur(2px);
+}
+
 .main {
   background-image: url("../assets/home/background-home-desktop.jpg");
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding: 11rem 15rem 15rem 15rem;
+}
+
+@media only screen and (max-width: 1200px) {
+  .main {
+    padding: 11rem 10rem 15rem 10rem;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
+  .main {
+    padding: 11rem 5rem 15rem 5rem;
+  }
 }
 
 @media only screen and (max-width: 820px) {
+  .article {
+    text-align: center;
+  }
+
+  .exploreButton:hover::before {
+    content: "";
+    width: 25rem;
+    height: 25rem;
+    position: absolute;
+    z-index: -1;
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(2px);
+    -webkit-backdrop-filter: blur(2px);
+  }
+
+  .article h2 {
+    margin: 0;
+    line-height: 1.3;
+  }
+
+  .article p {
+    text-align: center;
+  }
+
   .main {
     background-image: url("../assets/home/background-home-tablet.jpg");
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    padding: 11rem 5rem 10rem 5rem;
   }
 }
 
 @media only screen and (max-width: 500px) {
   .main {
+    padding: 11rem 2rem 15rem 2rem;
+  }
+
+  .article {
+    width: 100%;
+  }
+
+  .article h2 {
+    font-size: 2.4rem;
+  }
+
+  .article p {
+    font-size: 1.6rem;
+  }
+
+  .article strong {
+    font-size: 9.5rem;
+  }
+
+  .exploreButton {
+    width: 15rem;
+    height: 15rem;
+  }
+
+  .main {
     background-image: url("../assets/home/background-home-mobile.jpg");
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  .article strong {
+    font-size: 7.5rem;
+  }
+}
+
+@media only screen and (max-height: 770px) {
+  .main {
+    padding-bottom: 3rem;
   }
 }
