--- a/styles/Destination.module.css
+++ b/styles/Destination.module.css
@@ -1,15 +1,178 @@
+.active {
+  border-bottom: 0.3rem solid white !important;
+}
+
+.article h2 {
+  font-size: 10rem;
+  font-family: "Bellefair";
+  color: white;
+  text-transform: uppercase;
+  margin: 3rem 0 0 0;
+}
+
+.article p {
+  font-size: 1.8rem;
+  line-height: 1.5;
+  text-align: justify;
+  color: var(--light-purple);
+}
+
+.content {
+  padding-right: 25%;
+  padding-left: 10%;
+}
+
+.detail {
+  font-size: 2.8rem;
+  color: white;
+  font-family: "Bellefair";
+  text-transform: uppercase;
+}
+
+.image {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
 .main {
-  background-image: url("../assets/destination/background-destination-desktop.jpg");
+  background-image: url("../public/assets/destination/background-destination-desktop.jpg");
+  font-family: "Barlow Condensed";
+  display: flex;
+  flex-direction: column;
+  padding-left: 10rem;
+  padding-right: 10rem;
+}
+
+.main h1 {
+  color: white;
+  font-size: 3.2rem;
+  font-weight: 100;
+  letter-spacing: 0.475rem;
+  margin-top: 10rem;
+}
+
+.main span {
+  color: gray;
+  font-weight: bold;
+  margin-right: 2rem;
+}
+
+.section {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  padding-top: 10%;
+  height: 100%;
+}
+
+.tabs {
+  display: flex;
+  justify-content: space-around;
+}
+
+.tabs div {
+  color: var(--light-purple);
+  font-size: 1.6rem;
+  font-weight: 100;
+  text-transform: uppercase;
+  /* margin-right: 5rem; */
+  letter-spacing: 0.27rem;
+  cursor: pointer;
+  border-bottom: 0.3rem solid transparent;
+  padding-bottom: 1.5rem;
+}
+
+.tabs div:hover {
+  border-bottom: 0.3rem solid rgba(255, 255, 255, 0.5);
+}
+
+.title {
+  font-size: 1.6rem;
+  color: var(--light-purple);
+  letter-spacing: 0.27rem;
+}
+
+.travelInfo {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  border-top: 1px solid rgba(255, 255, 255, 0.2);
+  padding-top: 3rem;
+}
+
+@media only screen and (max-width: 1200px) {
+  .content {
+    padding-right: 5%;
+  }
 }
 
 @media only screen and (max-width: 820px) {
+  .article p {
+    text-align: center;
+    min-height: 8.1rem;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 5rem 0 0 0;
+  }
+
   .main {
-    background-image: url("../assets/destination/background-destination-tablet.jpg");
+    background-image: url("../public/assets/destination/background-destination-tablet.jpg");
+    padding-left: 5rem;
+    padding-right: 5rem;
+    height: auto;
+    min-height: 100vh;
+  }
+
+  .main h1 {
+    margin-top: 0;
+    font-size: 2.8rem;
+  }
+
+  .section {
+    display: flex;
+    flex-direction: column;
+    padding: 5% 0;
+  }
+
+  .tabs {
+    width: 100%;
   }
 }
 
 @media only screen and (max-width: 500px) {
+  .article h2 {
+    font-size: 8rem;
+  }
+
   .main {
-    background-image: url("../assets/destination/background-destination-mobile.jpg");
+    background-image: url("../public/assets/destination/background-destination-mobile.jpg");
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+
+  .main h1 {
+    font-size: 2rem;
+  }
+
+  .travelInfo {
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 1.5fr 1fr 1.5fr;
+  }
+
+  .travelInfo div:nth-child(3) {
+    grid-row: 2;
+    margin-bottom: 2rem;
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  .main h1 {
+    font-size: 1.8rem;
+    text-align: center;
   }
 }
