--- a/styles/Crew.module.css
+++ b/styles/Crew.module.css
@@ -1,15 +1,144 @@
+.active {
+  background-color: white !important;
+}
+
+.article {
+  align-self: center;
+}
+
+.article h2 {
+  font-size: 5.6rem;
+  color: white;
+  text-transform: uppercase;
+}
+
+.article h2 span {
+  font-size: 3.2rem;
+  color: gray;
+  display: inline-block;
+  margin-bottom: 3rem;
+}
+
+.article p {
+  font-size: 1.8rem;
+  line-height: 1.5;
+  color: var(--light-purple);
+  padding-right: 20rem;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 20% 0;
+}
+
+.image {
+  position: relative;
+}
+
 .main {
   background-image: url("../public/assets/crew/background-crew-desktop.jpg");
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.sliders {
+  display: flex;
+}
+
+.sliders div {
+  width: 1.4rem;
+  height: 1.4rem;
+  background-color: rgba(255, 255, 255, 0.2);
+  border-radius: 50%;
+  margin-right: 3rem;
+  cursor: pointer;
+}
+
+.sliders div:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+}
+
+@media only screen and (max-width: 1200px) {
+  .main {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+
+  .article p {
+    padding-right: 10rem;
+  }
 }
 
 @media only screen and (max-width: 820px) {
+  .article h2 span {
+    margin-bottom: 1rem;
+  }
+
+  .article p {
+    padding: 0 5rem;
+  }
+
+  .content {
+    padding: 0;
+    text-align: center;
+  }
+
+  .image {
+    flex-grow: 2;
+  }
+
   .main {
     background-image: url("../public/assets/crew/background-crew-tablet.jpg");
+    display: flex;
+    flex-direction: column;
+  }
+
+  .sliders {
+    justify-content: center;
+    margin: 3rem 0;
   }
 }
 
 @media only screen and (max-width: 500px) {
+  .article {
+    height: 40rem;
+  }
+
+  .article h2 {
+    font-size: 3.2rem;
+  }
+
+  .article h2 span {
+    font-size: 2rem;
+  }
+
+  .article p {
+    padding: 0;
+  }
+
+  .image {
+    flex-grow: unset;
+    height: 30rem;
+  }
+
+  .content {
+    flex-direction: column-reverse;
+    justify-content: flex-start;
+  }
+
+  .image {
+    border-bottom: 0.1rem solid rgba(255, 255, 255, 0.2);
+  }
+
   .main {
     background-image: url("../public/assets/crew/background-crew-mobile.jpg");
+    flex-direction: column-reverse;
+    justify-content: flex-end;
+    min-height: 100vh;
+    height: auto;
+    padding-left: 2rem;
+    padding-right: 2rem;
   }
 }
