--- a/styles/Destination.module.css
+++ b/styles/Destination.module.css
@@ -37,25 +37,6 @@
 
 .main {
   background-image: url("../public/assets/destination/background-destination-desktop.jpg");
-  font-family: "Barlow Condensed";
-  display: flex;
-  flex-direction: column;
-  padding-left: 10rem;
-  padding-right: 10rem;
-}
-
-.main h1 {
-  color: white;
-  font-size: 3.2rem;
-  font-weight: 100;
-  letter-spacing: 0.475rem;
-  margin-top: 10rem;
-}
-
-.main span {
-  color: gray;
-  font-weight: bold;
-  margin-right: 2rem;
 }
 
 .section {
@@ -122,15 +103,6 @@
 
   .main {
     background-image: url("../public/assets/destination/background-destination-tablet.jpg");
-    padding-left: 5rem;
-    padding-right: 5rem;
-    height: auto;
-    min-height: 100vh;
-  }
-
-  .main h1 {
-    margin-top: 0;
-    font-size: 2.8rem;
   }
 
   .section {
@@ -151,12 +123,6 @@
 
   .main {
     background-image: url("../public/assets/destination/background-destination-mobile.jpg");
-    padding-left: 1rem;
-    padding-right: 1rem;
-  }
-
-  .main h1 {
-    font-size: 2rem;
   }
 
   .travelInfo {
@@ -170,9 +136,8 @@
   }
 }
 
-@media only screen and (max-width: 330px) {
-  .main h1 {
-    font-size: 1.8rem;
-    text-align: center;
+@media only screen and (max-width: 350px) {
+  .tabs div {
+    font-size: 1.2rem;
   }
 }
