--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,14 +18,19 @@ a {
 
 main {
   height: 100%;
-  padding-top: 11rem;
+  padding-top: 26rem;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  position: relative;
+  padding-left: 10rem;
+  padding-right: 10rem;
 }
 
+h1,
 h2 {
   font-weight: 100;
+  margin: 0;
 }
 
 .srOnly {
@@ -35,6 +40,57 @@ h2 {
   padding: 0;
   clip: rect(1px 1px 1px 1px);
   position: absolute;
+}
+
+.tourHeading {
+  color: white;
+  font-size: 3.2rem;
+  font-family: "Barlow Condensed";
+  letter-spacing: 0.475rem;
+  position: absolute;
+  top: 21rem;
+  left: 5rem;
+}
+
+.tourHeading span {
+  color: gray;
+  font-weight: bold;
+  margin-right: 2rem;
+}
+
+@media only screen and (max-width: 820px) {
+  .tourHeading {
+    top: 11rem;
+    font-size: 2.8rem;
+  }
+
+  main {
+    padding-top: 16rem;
+    padding-left: 5rem;
+    padding-right: 5rem;
+    height: auto;
+    min-height: 100vh;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .tourHeading {
+    font-size: 2rem;
+    width: 100%;
+    left: 0;
+    text-align: center;
+  }
+
+  main {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+}
+
+@media only screen and (max-width: 330px) {
+  .tourHeading {
+    font-size: 1.8rem;
+  }
 }
 
 :root {
