--- a/styles/App.module.css
+++ b/styles/App.module.css
@@ -3,8 +3,10 @@
 }
 
 .container {
+  max-width: 1440px;
   height: 100vh;
   position: relative;
+  margin: 0 auto;
 }
 
 .hr {
@@ -59,6 +61,12 @@
 
 .mobileLinks {
   display: none;
+}
+
+@media only screen and (min-width: 1441px) {
+  .container {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  }
 }
 
 @media only screen and (max-width: 1200px) {
