--- a/styles/Destination.module.css
+++ b/styles/Destination.module.css
@@ -53,7 +53,6 @@
   font-size: 1.6rem;
   font-weight: 100;
   text-transform: uppercase;
-  /* margin-right: 5rem; */
   letter-spacing: 0.27rem;
   cursor: pointer;
   border-bottom: 0.3rem solid transparent;
@@ -85,6 +84,10 @@
 }
 
 @media only screen and (max-width: 820px) {
+  .article {
+    padding-bottom: 3rem;
+  }
+
   .article p {
     text-align: center;
     min-height: 8.1rem;
