--- a/styles/Technology.module.css
+++ b/styles/Technology.module.css
@@ -1,15 +1,154 @@
+.active {
+  border: none;
+  background-color: white;
+  color: var(--almost-black) !important;
+}
+
+.article {
+  padding-left: 5rem;
+}
+
+.article h2 {
+  font-size: 5.6rem;
+  color: white;
+  text-transform: uppercase;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+
+.article span,
+.article p {
+  font-size: 1.8rem;
+  line-height: 1.5;
+  color: var(--light-purple);
+}
+
+.article p {
+  padding-right: 40%;
+  margin-bottom: 0;
+}
+
+.content {
+  width: 60%;
+  display: flex;
+  align-items: center;
+  padding: 8% 0;
+}
+
+.image {
+  flex-grow: 1;
+  position: relative;
+}
+
 .main {
   background-image: url("../public/assets/technology/background-technology-desktop.jpg");
+  padding-right: 0;
+  display: flex;
+  align-items: center;
+}
+
+.section {
+  display: flex;
+  height: 80%;
+}
+
+.sliders {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.sliders div {
+  font-size: 3.2rem;
+  color: white;
+  border-radius: 50%;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  width: 8rem;
+  height: 8rem;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.sliders div:nth-child(2) {
+  margin: 3rem 0;
+}
+
+.sliders div:hover {
+  border: 1px solid white;
+}
+
+@media only screen and (max-width: 1200px) {
+  .article p {
+    padding-right: 20%;
+  }
+
+  .main {
+    padding-left: 5rem;
+  }
 }
 
 @media only screen and (max-width: 820px) {
+  .article {
+    text-align: center;
+    padding: 0;
+    margin-top: 5rem;
+  }
+
+  .article p {
+    padding: 0 15%;
+  }
+
+  .content {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .image {
+    height: 30rem;
+  }
+
   .main {
     background-image: url("../public/assets/technology/background-technology-tablet.jpg");
+    align-items: flex-start;
+    padding-left: 0;
+  }
+
+  .section {
+    flex-direction: column-reverse;
+  }
+
+  .sliders {
+    flex-direction: row;
+  }
+
+  .sliders div:nth-child(2) {
+    margin: 0 3rem;
+  }
+}
+
+@media only screen and (max-width: 650px) {
+  .image {
+    height: 20rem;
   }
 }
 
 @media only screen and (max-width: 500px) {
+  .article h2 {
+    font-size: 3.2rem;
+  }
+
   .main {
     background-image: url("../public/assets/technology/background-technology-mobile.jpg");
+    min-height: 100vh;
+    height: auto;
+  }
+
+  .sliders div {
+    width: 6rem;
+    height: 6rem;
+    font-size: 2.8rem;
   }
 }
