--- a/styles/globals.css
+++ b/styles/globals.css
@@ -49,13 +49,19 @@ h2 {
   letter-spacing: 0.475rem;
   position: absolute;
   top: 21rem;
-  left: 5rem;
+  left: 10rem;
 }
 
 .tourHeading span {
   color: gray;
   font-weight: bold;
   margin-right: 2rem;
+}
+
+@media only screen and (max-width: 1200px) {
+  .tourHeading {
+    left: 5rem;
+  }
 }
 
 @media only screen and (max-width: 820px) {
