--- a/styles/Crew.module.css
+++ b/styles/Crew.module.css
@@ -39,6 +39,10 @@
 
 .main {
   background-image: url("../public/assets/crew/background-crew-desktop.jpg");
+  display: flex;
+}
+
+.section {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
@@ -91,6 +95,9 @@
 
   .main {
     background-image: url("../public/assets/crew/background-crew-tablet.jpg");
+  }
+
+  .section {
     display: flex;
     flex-direction: column;
   }
@@ -134,11 +141,14 @@
 
   .main {
     background-image: url("../public/assets/crew/background-crew-mobile.jpg");
-    flex-direction: column-reverse;
-    justify-content: flex-end;
     min-height: 100vh;
     height: auto;
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .section {
+    flex-direction: column-reverse;
+    justify-content: flex-end;
   }
 }
