--- a/styles/globals.css
+++ b/styles/globals.css
@@ -64,6 +64,13 @@ h2 {
   }
 }
 
+@media only screen and (max-width: 1024px) {
+  main {
+    padding-left: 5rem;
+    padding-right: 5rem;
+  }
+}
+
 @media only screen and (max-width: 820px) {
   .tourHeading {
     top: 11rem;
@@ -72,8 +79,6 @@ h2 {
 
   main {
     padding-top: 16rem;
-    padding-left: 5rem;
-    padding-right: 5rem;
     height: auto;
     min-height: 100vh;
   }
@@ -96,6 +101,19 @@ h2 {
 @media only screen and (max-width: 330px) {
   .tourHeading {
     font-size: 1.8rem;
+  }
+}
+
+@media only screen and (min-width: 1441px) {
+  main {
+    padding-left: 0;
+    padding-right: 0;
+    display: flex;
+    justify-content: center;
+  }
+
+  section {
+    width: 1400px;
   }
 }
 
